# jobber

./: .gitignore  README.md  config.yaml  exp.py  hshfasf.py  main.py  parameters.yaml  prefect.yaml  pyproject.toml  test_extract_1.py
config/: __init__.py  baseconfig.py  config_class.py  config_utils.py
db/: utils.py
examples/: browser_use_example.py  css_extraction_linkedin_job.py
how_to/: crawl.md
linkedin/: models.py
linkedin/items/: linkedin_objects.py  utils.py
parameters/: parameter.py
scrapper/: common_action.py  context.py  crawl.py  hooks.py  job_utils.py  logger.py  page_action.py  page_process.py  show_jsonl.ipynb  test.py  utils.py
scrapper/components/: filter.py
scrapper/core/: page_output.py
src/: create_context.py  github_utils.py  llm_base.py  repo_summarizer.py  resume_generator.py
src/resume_maker/: example_template.yaml  full_example_CV.yaml  models.py  resume_formatting_code_instructions.md  resume_formatting_layout_instructions.md  template_engineeringresumes.yaml  template_engineeringresumes_design_settings.yaml  template_sb2nov.yaml  template_sb2nov_CV.yaml  template_sb2nov_design_settings.yaml
steps/: __init__.py  github_obj.py  github_utils.py  scrap_job_1.py
v2/: context.py  crawl.py  custom_extraction_stategy.py  hooks.py  job_utils.py  loginlinkedin.py  models.py  remove_codeblock.py  show_jsonl.ipynb  utils.py  wher_to_pick.py
v2/actions/: common_action.py  job_list_action.py  job_view_action.py
v2/components/: filter.py
v2/config/: __init__.py  base_config.py  config_loader.py  parameters.py
(+50 files in other folders)
