[tool.poetry]
name = "scrappa"
version = "0.1.3"
description = ""
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"
packages = [
    { include = "v2" },
    { include = "config"},

]

[tool.poetry.dependencies]
python = "^3.12"
icecream = "^2.1.3"
crawl4ai = "^0.3.746"
pandas = "^2.2.3"
lxml = "^5.3.0"
html5lib = "^1.1"
autogen-agentchat = "0.4.0.dev9"
litellm = "^1.53.7"
prefect = "^3.1.5"
sqlmodel = "^0.0.22"
markdownify = "^0.14.1"
markitdown = "^0.0.1a2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
